--- a/index.html
+++ b/index.html
@@ -3,34 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nano Banana Pro | Генератор ИИ</title>
+    <title>Nano Banana Pro | ИИ Генератор</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Space Grotesk', 'sans-serif'],
+              sans: ['Inter', 'sans-serif'],
               mono: ['JetBrains Mono', 'monospace'],
             },
-            backgroundImage: {
-              'grid-pattern': "linear-gradient(to right, #1f2937 1px, transparent 1px), linear-gradient(to bottom, #1f2937 1px, transparent 1px)",
+            colors: {
+              background: '#09090b',
+              surface: '#18181b',
+              'surface-hover': '#27272a',
+              primary: '#eab308', // Yellow-500
+              'primary-hover': '#ca8a04', // Yellow-600
+              border: '#27272a',
             },
             animation: {
-              'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-              'shine': 'shine 2s linear infinite',
-              'float': 'float 6s ease-in-out infinite',
+              'fade-in': 'fadeIn 0.4s ease-out forwards',
+              'slide-up': 'slideUp 0.4s ease-out forwards',
             },
             keyframes: {
-              shine: {
-                '0%': { transform: 'translateX(-100%)' },
-                '100%': { transform: 'translateX(100%)' }
+              fadeIn: {
+                '0%': { opacity: 0 },
+                '100%': { opacity: 1 }
               },
-              float: {
-                '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-10px)' },
+              slideUp: {
+                '0%': { opacity: 0, transform: 'translateY(10px)' },
+                '100%': { opacity: 1, transform: 'translateY(0)' }
               }
             }
           }
@@ -39,51 +43,24 @@
     </script>
     <style>
       body {
-        background-color: #030304;
-        color: #e5e7eb;
+        background-color: #09090b;
+        color: #e4e4e7;
         overflow-x: hidden;
+        -webkit-font-smoothing: antialiased;
       }
       
-      /* Noise Texture */
-      .bg-noise {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        z-index: 50;
-        opacity: 0.03;
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-      }
-
-      /* Background Grid */
-      .bg-grid {
-        background-size: 40px 40px;
-        mask-image: linear-gradient(to bottom, transparent, 10%, black, 90%, transparent);
-        -webkit-mask-image: linear-gradient(to bottom, transparent, 5%, black, 95%, transparent);
-      }
-
-      /* Custom Scrollbar */
       ::-webkit-scrollbar {
         width: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #030304; 
+        background: #09090b; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #333; 
-        border-radius: 10px;
+        background: #3f3f46; 
+        border-radius: 3px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #eab308; 
-      }
-
-      .glass-panel {
-        background: rgba(13, 13, 14, 0.6);
-        backdrop-filter: blur(16px);
-        -webkit-backdrop-filter: blur(16px);
-        border: 1px solid rgba(255, 255, 255, 0.08);
+        background: #52525b; 
       }
     </style>
   <script type="importmap">
@@ -99,7 +76,6 @@
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
-    <div class="bg-noise"></div>
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
